complete status is changing in DB, but not error somewhere to show on DOM

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1,3 +1,17 @@
+html, body {
+    width: 50%;
+    margin: 0 auto;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.container {
+    width: 360px;
+}
+
+h1 {
+    color:aliceblue;
+}
+
 .next {
     background-color: rgb(204, 248, 149);
 }
